...
            "state": "translated",
            "value": "Aggiungi un elemento"
          }
        }
      }
    },
    "Add a subtask": {
      "localizations": {
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Añadir una subtarea"
          }
...
            "state": "translated",
            "value": "Aggiungi un elemento"
          }
        }
      }
    },
    "Add category": {
      "localizations": {
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Añadir categoría"
          }
...
            "state": "translated",
            "value": "Categorie"
          }
        }
      }
    },
    "Category": {
      "localizations": {
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Categoría"
          }
...
            "state": "translated",
            "value": "Contenuto"
          }
        }
      }
    },
    "Continue as guest": {
      "localizations": {
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Continuar como invitado"
          }
...
            "state": "translated",
            "value": "Categoria predefinita"
          }
        }
      }
    },
    "Delete": {
      "localizations": {
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Eliminar"
          }
...
            "state": "translated",
            "value": "Scadenza"
          }
        }
      }
    },
    "Due date": {
      "localizations": {
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Fecha límite"
          }
...
            "state": "translated",
            "value": "Hai ricevuto un codice? Inseriscilo qui per passare alla loro casa."
          }
        }
      }
    },
    "High": {
      "localizations": {
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Alta"
          }
...
            "state": "translated",
            "value": "Crea attività"
          }
        }
      }
    },
    "Manage categories": {
      "localizations": {
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Gestionar categorías"
          }
...
            "state": "translated",
            "value": "Membri e inviti"
          }
        }
      }
    },
    "My Household": {
      "localizations": {
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Mi hogar"
          }
...
            "state": "translated",
            "value": "La mia casa"
          }
        }
      }
    },
    "Name": {
      "localizations": {
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Nombre"
          }
...
            "state": "translated",
            "value": "Nome"
          }
        }
      }
    },
    "New category": {
      "localizations": {
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Nueva categoría"
          }
...
            "state": "translated",
            "value": "Nuova voce"
          }
        }
      }
    },
    "New task": {
      "localizations": {
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Nueva tarea"
          }
...
            "state": "translated",
            "value": "Non ora"
          }
        }
      }
    },
    "Notes": {
      "localizations": {
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Notas"
          }
...
            "state": "translated",
            "value": "Piani"
          }
        }
      }
    },
    "Priority": {
      "localizations": {
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Prioridad"
          }
...
            "state": "translated",
            "value": "Revoca"
          }
        }
      }
    },
    "Save": {
      "localizations": {
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Guardar"
          }
...
